--- a/style.css
+++ b/style.css
@@ -285,12 +285,15 @@ span {
   width: 100%;
   position: relative;
 }
-.timeline-item:last-child {
+/* .timeline-item:last-child {
   margin-bottom: 0;
   padding-left: calc(50% + 30px);
-}
+} */
 .timeline-item:nth-child(odd) {
   padding-right: calc(50% + 30px);
+}
+.timeline-item:nth-child(even) {
+  padding-left: calc(50% + 30px);
 }
 .timeline-dot {
   height: 23px;
